name:                agda-bench
version:             1.1.0
license:             BSD3
license-file:        LICENSE
author:              Ulf Norell
maintainer:          ulf.norell@gmail.com
copyright:           Ulf Norell, 2018
category:            Language, Performance
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10
synopsis:            Benchmarking tool for compile-time performance of Agda
                     programs.
description:
  Allows benchmarking the compile-time (type-checking time) performance of Agda
  code. The tool is implemented as an Agda backend, which means that
  `agda-bench` is a fully functional Agda compiler with some extra options for
  benchmarking.

source-repository head
  type:     git
  location: https://github.com/UlfNorell/agda-bench.git

executable agda-bench
  main-is:             Main.hs
  build-depends:       base                 >= 4.10    && < 4.16
                     , Agda                 >= 2.5.4   && < 2.7
                     , criterion            >= 1.4
                     -- same as Agda 2.6.2
                     , deepseq              >= 1.4.2.0
                     , mtl                  >= 2.2.2   && < 2.3
                     , unordered-containers >= 0.2.5.0 && < 0.3
  ghc-options:         -rtsopts -with-rtsopts=-M8G
  default-language:    Haskell2010
